<resources>
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="more">More…</string>
    <string name="like">Like</string>
    <string name="likesCounter" translatable="false">125</string>
    <string name="sharesCounter" translatable="false">50000</string>
    <string name="watchesCounter" translatable="false">500K</string>
    <string name="shares">Shares</string>
    <string name="looks">Looks</string>
    <string name="post_remove">Remove</string>
    <string name="post_text" translatable="false">content_hint</string>
    <string name="post_edit">Edit</string>
    <string name="hello" translatable="false">Hello World!</string>
    <string name="description_post_author_avatar" translatable="false">Post author avatar</string>
    <string name="description_post_menu" translatable="false">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="play">play</string>
</resources>