<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin16"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@sample/posts_avatars"
        app:srcCompat="@drawable/post_avatar"
        />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/margin16"
        android:ellipsize="end"
        android:singleLine="true"
        android:text=""
        app:layout_constraintBottom_toTopOf="@id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="@id/avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />

    <TextView
        android:id="@+id/published"
        android:layout_width="105dp"
        android:layout_height="21dp"
        android:layout_marginStart="@dimen/margin16"
        app:layout_constraintBottom_toBottomOf="@+id/avatar"
        app:layout_constraintStart_toEndOf="@+id/avatar"
        app:layout_constraintTop_toBottomOf="@+id/author"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/published" />

    <ImageView
        android:id="@+id/menu"
        android:layout_width="29dp"
        android:layout_height="35dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/more"
        app:layout_constraintBottom_toBottomOf="@+id/author"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/author"
        app:layout_constraintTop_toTopOf="@id/author"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/topBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin16"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:layout_marginBottom="@dimen/margin16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topBarrier"
        tools:text="@sample/posts.json/data/content" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/bottomBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="content" />

    <ImageView
        android:id="@+id/likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin16"
        android:contentDescription="@string/like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
        app:srcCompat="@drawable/ic_like_24" />

    <TextView
        android:id="@+id/likesCounter"
        android:layout_width="48dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:text=""
        app:layout_constraintStart_toEndOf="@+id/likes"
        app:layout_constraintTop_toTopOf="@+id/likes"
        tools:text="@string/likesCounter" />

    <ImageView
        android:id="@+id/share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/shares"
        app:layout_constraintBottom_toBottomOf="@+id/likes"
        app:layout_constraintStart_toEndOf="@+id/likesCounter"
        app:layout_constraintTop_toTopOf="@+id/likes"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_baseline_share_24" />

    <TextView
        android:id="@+id/sharesCounter"
        android:layout_width="48dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:singleLine="true"
        android:text=""
        app:layout_constraintBottom_toBottomOf="@+id/likes"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toTopOf="@+id/likes"
        app:layout_constraintVertical_bias="0.8"
        tools:text="@string/sharesCounter" />

    <TextView
        android:id="@+id/looksCounter"
        android:layout_width="48dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier"
        tools:text="@string/watchesCounter" />

    <ImageView
        android:id="@+id/looks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/looks"
        app:layout_constraintEnd_toStartOf="@+id/looksCounter"
        app:layout_constraintTop_toTopOf="@+id/looksCounter"
        app:srcCompat="@drawable/ic_baseline_remove_red_eye_24" />

</androidx.constraintlayout.widget.ConstraintLayout>